--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body{
         height: 100vh;
         width: 100vw;
         justify-content: center;
-        align-content: center;
+        /* align-content: center; */
+        align-items: center;
             
     
         
